--- a/NCSTester/NCSTester-Info.plist
+++ b/NCSTester/NCSTester-Info.plist
@@ -37,5 +37,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.rosem.ncstest</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>ncstest</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
